# Elliot

elliotv2/: README.md  pyproject.toml
elliotv2/DOCS/: brain_regions.txt
elliotv2/src/elliotv2/: crew.py  main.py
elliotv2/src/elliotv2/agents/: agent.py
elliotv2/src/elliotv2/brain_regions/: amygdala.py  association_cortex.py  cerebellum.py  hippocampus.py  prefrontal_cortex.py
elliotv2/src/elliotv2/config/: agents.yaml  settings.py
elliotv2/src/elliotv2/data/: amygdala.db  hippocampus.db
elliotv2/src/elliotv2/data/cerebellum/: Data Preprocessing.pkl  Default_Workflow_2024-11-11T23_04_43.948360.pkl  Default_Workflow_2024-11-11T23_38_05.257870.pkl  IntegrationWorkflow.pkl  None.pkl  TestWorkflow.pkl  Valid Workflow.pkl  ValidWorkflow.pkl  example_workflow.pkl  test_workflow.pkl
elliotv2/src/elliotv2/logs/: error_log.txt
elliotv2/src/elliotv2/utils/: logger.py
